# kbench_amongus

./: .gitignore  README.md  pyproject.toml
kbench_amongus/: __init__.py  config.py  gradio_app.py  runner.py
kbench_amongus/agent/: __init__.py  base.py  llm_default.py  prompts.py  validation.py
kbench_amongus/envs/: __init__.py  action.py  game.py  map.py  player.py  task.py
kbench_amongus/envs/configs/: __init__.py
kbench_amongus/ui/: __init__.py  notebook_map_ui.py
